--- a/index.html
+++ b/index.html
@@ -36,7 +36,38 @@
       <md-card>
         <!-- this table is filled in if you typed in a story number -->
         <table id="storyDataTable">
+
           <tr>
+          <td id="ticket-id" colspan="3"></td>
+          <td id="title" colspan="14"></td>
+          <td colspan="3">1</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+
+
+
+         <!--  <tr>
             <td>Ticket-ID:</td>
             <td id="ticket-id"></td>
           </tr>
@@ -55,7 +86,7 @@
           <tr>
             <td>Story:</td>
             <td id="story"></td>
-          </tr>
+          </tr> -->
         </table>
       </md-card>
     </div> <!-- step 2 container -->
