--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/PDFCardStyle.css">
 
     <!-- favicon link -->
     <link rel="shortcut icon" href="./images/favicon.png">
@@ -34,39 +35,59 @@
       <h2>Story details</h2>
       <br />
       <md-card>
+
+
+        <div class="PDFCard">
+
+          <div id="1">
+          TICKET-ID
+          </div>
+
+          <div id="2">
+          TITLE
+          </div>
+
+          <div id="3">
+          PRIORITY
+          </div>
+
+          <div id="4">
+
+          </div>
+
+          <div id="5">
+
+          </div>
+
+          <div id="6">
+
+          </div>
+
+          <div id="7">
+
+          </div>
+
+          <div id="8">
+
+          </div>
+
+          <div id="9">
+
+          </div>
+
+          <div id="10">
+
+          </div>
+
+          <div id="11">
+
+          </div>
+
+        </div>
+
+
         <!-- this table is filled in if you typed in a story number -->
         <table id="storyDataTable">
-
-          <tr>
-          <td id="ticket-id" colspan="3"></td>
-          <td id="title" colspan="14"></td>
-          <td colspan="3">1</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-
-
-
          <!--  <tr>
             <td>Ticket-ID:</td>
             <td id="ticket-id"></td>
