--- a/index.html
+++ b/index.html
@@ -39,47 +39,47 @@
 
         <div class="PDFCard">
 
-          <div id="1">
+          <div id="PDFCard1">
           TICKET-ID
           </div>
 
-          <div id="2">
+          <div id="PDFCard2">
           TITLE
           </div>
 
-          <div id="3">
+          <div id="PDFCard3">
           PRIORITY
           </div>
 
-          <div id="4">
+          <div id="PDFCard4">
 
           </div>
 
-          <div id="5">
+          <div id="PDFCard5">
 
           </div>
 
-          <div id="6">
+          <div id="PDFCard6">
 
           </div>
 
-          <div id="7">
+          <div id="PDFCard7">
 
           </div>
 
-          <div id="8">
+          <div id="PDFCard8">
 
           </div>
 
-          <div id="9">
+          <div id="PDFCard9">
 
           </div>
 
-          <div id="10">
+          <div id="PDFCard10">
 
           </div>
 
-          <div id="11">
+          <div id="PDFCard11">
 
           </div>
 
