--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
         <div class="PDFCard">
 
           <div id="PDFCard1">
-          TICKET-ID
+          TICKET-ID:
           </div>
 
           <div id="PDFCard2">
-          TITLE
+          TITLE:
           </div>
 
           <div id="PDFCard3">
-          PRIORITY
+          PRIORITY:
           </div>
 
           <div id="PDFCard4">
-
+          EPIC:
           </div>
 
           <div id="PDFCard5">
-
+          GROOM:
           </div>
 
           <div id="PDFCard6">
-
+          CORR:
           </div>
 
           <div id="PDFCard7">
-
+          REAL:
           </div>
 
           <div id="PDFCard8">
