--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <br />
       <h2>Story details</h2>
       <br />
-      <md-card>
+      <!-- <md-card> -->
 
 
-        <div class="PDFCard">
+        <md-card class="PDFCard">
 
           <div id="PDFCard1">
           TICKET-ID:
@@ -83,7 +83,7 @@
 
           </div>
 
-        </div>
+        </md-card>
 
 
         <!-- this table is filled in if you typed in a story number -->
@@ -109,7 +109,7 @@
             <td id="story"></td>
           </tr> -->
         </table>
-      </md-card>
+     <!--  </md-card> -->
     </div> <!-- step 2 container -->
 
 
