--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
           </div>
 
           <div id="PDFCard8">
-
+          STORY:
           </div>
 
           <div id="PDFCard9">
-
+          NOTES:
           </div>
 
           <div id="PDFCard10">
