--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
           </div>
 
           <div id="PDFCard10">
-
+          ACCEPTANCE CRITERIA:
           </div>
 
           <div id="PDFCard11">
-
+          DEFINITION OF DONE:
           </div>
 
         </md-card>
