--- a/index.html
+++ b/index.html
@@ -39,48 +39,58 @@
 
         <md-card class="PDFCard">
 
-          <div id="PDFCard1">
-          TICKET-ID:
+          <div id="ticket-id">
+            TICKET-ID:
           </div>
 
-          <div id="PDFCard2">
-          TITLE:
+          <div id="title">
+            TITLE:
           </div>
 
           <div id="PDFCard3">
-          PRIORITY:
+            PRIORITY:
           </div>
 
-          <div id="PDFCard4">
-          EPIC:
+          <div id="epic">
+            EPIC:
           </div>
 
-          <div id="PDFCard5">
-          GROOM:
+          <div id="groom">
+            GROOM:
           </div>
 
           <div id="PDFCard6">
-          CORR:
+            CORR:
           </div>
 
           <div id="PDFCard7">
-          REAL:
+            REAL:
           </div>
 
-          <div id="PDFCard8">
-          STORY:
+          <div id="story">
+           STORY:
           </div>
 
           <div id="PDFCard9">
-          NOTES:
+            NOTES:
           </div>
 
           <div id="PDFCard10">
-          ACCEPTANCE CRITERIA:
+            ACCEPTANCE CRITERIA:
+            <table id="storyDataTable">
+            </table>
           </div>
 
           <div id="PDFCard11">
-          DEFINITION OF DONE:
+            <p>DEFINITION OF DONE:</p>
+            <p>__ Responsiveness </p>
+            <p>__ Internationalization</p>
+            <p>__ Code Review</p>
+            <p>__ Documentation </p>
+            <p>__ Testing by ....... </p>
+            <p>__ Bug-fixing by ....... </p>
+            <p>__ Linting & Beautify Code </p>
+            <p>__ Quality assurance by PO</p>
           </div>
 
         </md-card>
