--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
           </div>
 
           <div id="PDFCard11">
-            <p>DEFINITION OF DONE:</p>
-            <p>__ Responsiveness </p>
-            <p>__ Internationalization</p>
-            <p>__ Code Review</p>
-            <p>__ Documentation </p>
-            <p>__ Testing by ....... </p>
-            <p>__ Bug-fixing by ....... </p>
-            <p>__ Linting & Beautify Code </p>
-            <p>__ Quality assurance by PO</p>
+            <p>DEFINITION OF DONE:<br /></p>
+            <p>__ Responsiveness <br /></p>
+            <p>__ Internationalization <br /></p>
+            <p>__ Code Review <br /></p>
+            <p>__ Documentation <br /></p>
+            <p>__ Testing by ....... <br /></p>
+            <p>__ Bug-fixing by ....... <br /></p>
+            <p>__ Linting & Beautify Code <br /></p>
+            <p>__ Quality assurance by PO <br /></p>
           </div>
 
         </md-card>
