--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!-- <md-card> -->
 
 
-        <md-card class="PDFCard">
+        <div class="PDFCard">
 
           <div id="ticket-id">
             TICKET-ID:
@@ -93,7 +93,7 @@
             <p>__ Quality assurance by PO <br /></p>
           </div>
 
-        </md-card>
+        </div>
 
 
         <!-- this table is filled in if you typed in a story number -->
