--- a/index.html
+++ b/index.html
@@ -39,24 +39,28 @@
 
         <md-card class="PDFCard">
 
-          <div id="ticket-id">
+          <div id="PDFCard1">
             TICKET-ID:
+            <div id="ticket-id"></div>
           </div>
 
-          <div id="title">
+          <div id="PDFCard2">
             TITLE:
+            <div id="title"></div>
           </div>
 
           <div id="PDFCard3">
             PRIORITY:
           </div>
 
-          <div id="epic">
+          <div id="PDFCard4">
             EPIC:
+            <div id="epic"></div>
           </div>
 
-          <div id="groom">
+          <div id="PDFCard5">
             GROOM:
+            <div id="groom"></div>
           </div>
 
           <div id="PDFCard6">
@@ -67,8 +71,9 @@
             REAL:
           </div>
 
-          <div id="story">
-           STORY:
+          <div id="PDFCard8">
+            STORY:
+            <div id="story"></div>
           </div>
 
           <div id="PDFCard9">
@@ -76,21 +81,20 @@
           </div>
 
           <div id="PDFCard10">
-            ACCEPTANCE CRITERIA:
-            <table id="storyDataTable">
-            </table>
+            ACCEPTANCE CRITERIA: <br />
+            <table id="storyDataTable"></table>
           </div>
 
           <div id="PDFCard11">
-            <p>DEFINITION OF DONE:<br /></p>
-            <p>__ Responsiveness <br /></p>
-            <p>__ Internationalization <br /></p>
-            <p>__ Code Review <br /></p>
-            <p>__ Documentation <br /></p>
-            <p>__ Testing by ....... <br /></p>
-            <p>__ Bug-fixing by ....... <br /></p>
-            <p>__ Linting & Beautify Code <br /></p>
-            <p>__ Quality assurance by PO <br /></p>
+            DEFINITION OF DONE:<br /><br />
+            __ Responsiveness <br /><br />
+            __ Internationalization <br /><br />
+            __ Code Review <br /><br />
+            __ Documentation <br /><br />
+            __ Testing by ....... <br /><br />
+            __ Bug-fixing by ....... <br /><br />
+            __ Linting & Beautify Code <br /><br />
+            __ Quality assurance by PO <br /><br />
           </div>
 
         </md-card>
