--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
 
         <!-- this table is filled in if you typed in a story number -->
-        <table id="storyDataTable">
-         <!--  <tr>
+      <!--   <table id="storyDataTable">
+          <tr>
             <td>Ticket-ID:</td>
             <td id="ticket-id"></td>
           </tr>
@@ -121,8 +121,8 @@
           <tr>
             <td>Story:</td>
             <td id="story"></td>
-          </tr> -->
-        </table>
+          </tr>
+        </table> -->
      <!--  </md-card> -->
     </div> <!-- step 2 container -->
 
