--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
           <div id="PDFCard1">
             TICKET-ID:
-            <div id="ticket-id"></div>
+            <span id="ticket-id"></span>
           </div>
 
           <div id="PDFCard2">
             TITLE:
-            <div id="title"></div>
+            <span id="title"></span>
           </div>
 
           <div id="PDFCard3">
@@ -55,12 +55,12 @@
 
           <div id="PDFCard4">
             EPIC:
-            <div id="epic"></div>
+            <span id="epic"></span>
           </div>
 
           <div id="PDFCard5">
             GROOM:
-            <div id="groom"></div>
+            <span id="groom"></span>
           </div>
 
           <div id="PDFCard6">
@@ -73,7 +73,7 @@
 
           <div id="PDFCard8">
             STORY:
-            <div id="story"></div>
+            <span id="story"></span>
           </div>
 
           <div id="PDFCard9">
