--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             __ Bug-fixing by ....... <br /><br />
             __ Linting & Beautify Code <br /><br />
             __ Quality assurance by PO <br /><br />
+            __ Create pull request<br /><br />
           </div>
 
         </md-card>
