--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       </p>
       <br />
       <h2>Story details</h2>
+
+      <div id="pdfview"></div>
+
+
       <br />
       <!-- <md-card> -->
 
@@ -244,6 +248,9 @@
     <!-- PDFmake -->
     <script src="./js/pdfmake.min.js"></script>
     <script src="./js/vfs_fonts.js"></script>
+
+    <!-- pdfObject -->
+    <script src="./js/pdfobject.js"></script>
 
     <!-- controller -->
     <script src="./js/controller.js"></script>
