--- a/index.html
+++ b/index.html
@@ -33,80 +33,11 @@
       </p>
       <br />
       <h2>Story details</h2>
-
-      <div id="pdfview"></div>
-
-
       <br />
-      <!-- <md-card> -->
 
 
-        <md-card class="PDFCard">
-
-          <div id="PDFCard1">
-            TICKET-ID:
-            <span id="ticket-id"></span>
-          </div>
-
-          <div id="PDFCard2">
-            TITLE:
-            <span id="title"></span>
-          </div>
-
-          <div id="PDFCard3">
-            PRIORITY:
-          </div>
-
-          <div id="PDFCard4">
-            EPIC:
-            <span id="epic"></span>
-          </div>
-
-          <div id="PDFCard5">
-            GROOM:
-            <span id="groom"></span>
-          </div>
-
-          <div id="PDFCard6">
-            CORR:
-          </div>
-
-          <div id="PDFCard7">
-            REAL:
-          </div>
-
-          <div id="PDFCard8">
-            STORY:
-            <span id="story"></span>
-          </div>
-
-          <div id="PDFCard9">
-            NOTES:
-          </div>
-
-          <div id="PDFCard10">
-            ACCEPTANCE CRITERIA: <br />
-            <table id="storyDataTable"></table>
-          </div>
-
-          <div id="PDFCard11">
-            DEFINITION OF DONE:<br /><br />
-            __ Responsiveness <br /><br />
-            __ Internationalization <br /><br />
-            __ Code Review <br /><br />
-            __ Documentation <br /><br />
-            __ Testing by ....... <br /><br />
-            __ Bug-fixing by ....... <br /><br />
-            __ Linting & Beautify Code <br /><br />
-            __ Quality assurance by PO <br /><br />
-            __ Create pull request<br /><br />
-          </div>
-
-        </md-card>
-
-
-        <!-- this table is filled in if you typed in a story number -->
-      <!--   <table id="storyDataTable">
+      <!-- this table is filled in if you typed in a story number -->
+      <table id="storyDataTable">
           <tr>
             <td>Ticket-ID:</td>
             <td id="ticket-id"></td>
@@ -127,8 +58,7 @@
             <td>Story:</td>
             <td id="story"></td>
           </tr>
-        </table> -->
-     <!--  </md-card> -->
+      </table>
     </div> <!-- step 2 container -->
 
 
