--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <td>Story:</td>
             <td id="story"></td>
           </tr>
-          <tr><td></td><td></td></tr>
+          <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
       </table>
     </div> <!-- step 2 container -->
 
