--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <br />
       <div class="loadingIndicator">
          <div layout="row" layout-sm="column" layout-align="space-around">
-            <md-progress-circular md-mode="indeterminate"><img src="./images/sablonoLogo.png"/></md-progress-circular>
-            
+            <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+            <img src="./images/sablonoLogo.png" class="sablonoLoader"/>
           </div>
       </div>
       <!-- this table is filled in when you have chosen a Sprint number -->
