--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="loadingIndicator">
          <div layout="row" layout-sm="column" layout-align="space-around">
             <md-progress-circular md-mode="indeterminate" md-diameter="200px"></md-progress-circular>
-            <img src="./images/sablonoLogo.png" class="sablonoLoader"/>
+           <!--  <img src="./images/sablonoLogo.png" class="sablonoLoader"/> -->
           </div>
       </div>
       <!-- this table is filled in when you have chosen a Sprint number -->
