--- a/index.html
+++ b/index.html
@@ -31,6 +31,44 @@
         <md-button class="md-raised md-primary" type="submit" id="btnNewStory">New story</md-button>
       </p>
       <br />
+      <h2>PDF options</h2>
+      <p>
+        <table>
+          <tr>
+            <td>
+              <input type="text" placeholder="Story font size" id="storyFontSize" value=""></input>
+            </td>
+            <td>
+              <md-button class="md-raised md-primary right" id="btnStoryFontSize" type="submit">Change</md-button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <input type="text" placeholder="Notes font size" id="notesFontSize" value=""></input>
+            </td>
+            <td>
+              <md-button class="md-raised md-primary right" id="btnNotesFontSize" type="submit">Change</md-button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              To many notes?
+            </td>
+            <td>
+              <md-button class="md-raised md-primary right" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Want to have auto number priority?
+            </td>
+            <td>
+              <md-button class="md-raised md-primary right" id="btnAutoNumber" type="submit">Add auto number priority to PDF</md-button>
+            </td>
+          </tr>
+        </table>
+      </p>
+      <br />
       <h2>Story details</h2>
       <br />
 
