--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <input type="text" placeholder="Story font size" id="storyFontSize" value=""></input>
             </td>
             <td>
-              <md-button class="md-raised md-primary right" id="btnStoryFontSize" type="submit">Change</md-button>
+              <md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button>
             </td>
           </tr>
           <tr>
@@ -47,23 +47,23 @@
               <input type="text" placeholder="Notes font size" id="notesFontSize" value=""></input>
             </td>
             <td>
-              <md-button class="md-raised md-primary right" id="btnNotesFontSize" type="submit">Change</md-button>
+              <md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button>
             </td>
           </tr>
           <tr>
             <td>
-              To many notes?
+               <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
             </td>
             <td>
-              <md-button class="md-raised md-primary right" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
+             
             </td>
           </tr>
           <tr>
             <td>
-              Want to have auto number priority?
+              <md-button class="md-raised md-primary" id="btnAutoNumber" type="submit">Add auto number priority to PDF</md-button>
             </td>
             <td>
-              <md-button class="md-raised md-primary right" id="btnAutoNumber" type="submit">Add auto number priority to PDF</md-button>
+              
             </td>
           </tr>
         </table>
