--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
         <table>
           <tr>
             <td>
-              <input type="text" placeholder="Story font size" id="storyFontSize" value=""></input>
+              Change story font size
             </td>
             <td>
+              <input type="text" placeholder="Story font size" id="storyFontSize" value=""></input>
               <md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button>
             </td>
           </tr>
           <tr>
             <td>
-              <input type="text" placeholder="Notes font size" id="notesFontSize" value=""></input>
+              Change notes font size
             </td>
             <td>
+              <input type="text" placeholder="Notes font size" id="notesFontSize" value=""></input>
               <md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button>
             </td>
           </tr>
@@ -54,16 +56,10 @@
             <td>
                <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
             </td>
-            <td>
-             
-            </td>
           </tr>
           <tr>
             <td>
               <md-button class="md-raised md-primary" id="btnAutoNumber" type="submit">Add auto number priority to PDF</md-button>
-            </td>
-            <td>
-              
             </td>
           </tr>
         </table>
