--- a/index.html
+++ b/index.html
@@ -33,37 +33,22 @@
       <br />
       <h2>PDF options</h2>
       <p>
-        <table>
-          <tr>
-            <td>
-              Change story font size
-            </td>
-            <td>
-              <input type="text" placeholder="Story font size" id="storyFontSize" value=""></input>
-              <md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Change notes font size
-            </td>
-            <td>
-              <input type="text" placeholder="Notes font size" id="notesFontSize" value=""></input>
-              <md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-               <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <md-button class="md-raised md-primary" id="btnAutoNumber" type="submit">Add auto number priority to PDF</md-button>
-            </td>
-          </tr>
-        </table>
+        Change story font size
+        <input type="text" placeholder="Put in a number" id="storyFontSize" value=""></input>
+        <md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button>
+      </p>        
+      <p>
+         Change notes font size
+         <input type="text" placeholder="Put in a number" id="notesFontSize" value=""></input>
+         <md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button>
       </p>
+      <p>                      
+        <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
+      </p>        
+      <p>
+        <md-button class="md-raised md-primary" id="btnAutoNumber" type="submit">Add auto number priority to PDF</md-button>
+      </p>          
+       
       <br />
       <h2>Story details</h2>
       <br />
