--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <md-button class="md-raised md-primary" type="submit" id="btnNewStory">New story</md-button>
       </p>
       <br />
-      <h2>PDF options</h2>
+      <h2>Change font sizes</h2>
       <p>
         Change story font size
         <input type="text" placeholder="Put in a number" id="storyFontSize" value=""></input>
@@ -42,13 +42,14 @@
          <input type="text" placeholder="Put in a number" id="notesFontSize" value=""></input>
          <md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button>
       </p>
+      <h2>Extra options</h2>
       <p>                      
         <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
       </p>        
       <p>
         <md-button class="md-raised md-primary" id="btnAutoNumber" type="submit">Add auto number priority to PDF</md-button>
       </p>          
-       
+
       <br />
       <h2>Story details</h2>
       <br />
