--- a/index.html
+++ b/index.html
@@ -33,14 +33,18 @@
       <br />
       <h2>Change font sizes</h2>
       <p>
-        Change story font size
-        <input type="text" placeholder="Put in a number" id="storyFontSize" value=""></input>
-        <md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button>
-      </p>        
-      <p>
-         Change notes font size
-         <input type="text" placeholder="Put in a number" id="notesFontSize" value=""></input>
-         <md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button>
+      <table>
+        <tr>
+            <td>Change story font size</td>
+            <td><input type="text" placeholder="Put in a number" id="storyFontSize" value=""></input></td>
+            <td><md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button></td>
+        </tr>
+        <tr>
+             <td>Change notes font size</td>
+             <td><input type="text" placeholder="Put in a number" id="notesFontSize" value=""></input></td>
+             <td><md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button></td>
+        </tr>
+      </table>
       </p>
       <br />
       <h2>Extra options</h2>
