--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
       </p>        
       <p>
-        <md-button class="md-raised md-primary" id="btnAutoNumber" type="submit">Add auto number priority to PDF</md-button>
+        Choose priority number
+        <input type="text" placeholder="Put in a number" id="priorityNumber" value=""></input>
+        <md-button class="md-raised md-primary" id="btnPriorityNumber" type="submit">Change</md-button>
       </p>          
 
       <br />
