--- a/index.html
+++ b/index.html
@@ -31,31 +31,30 @@
         <md-button class="md-raised md-primary" type="submit" id="btnNewStory">New story</md-button>
       </p>
       <br />
-      <h2>Change font sizes</h2>
-      <p>
-      <table>
-        <tr>
-            <td>Change story font size</td>
-            <td><input type="text" placeholder="Put in a number" id="storyFontSize" value=""></input></td>
-            <td><md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button></td>
-        </tr>
-        <tr>
-             <td>Change notes font size</td>
-             <td><input type="text" placeholder="Put in a number" id="notesFontSize" value=""></input></td>
-             <td><md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button></td>
-        </tr>
-      </table>
-      </p>
-      <br />
       <h2>Extra options</h2>
-      <br />
-      <p>                      
-        <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
+      <p>
+        <table>
+          <tr>
+              <td>Change story font size</td>
+              <td><input type="text" placeholder="Put in a number" id="storyFontSize" value=""></input></td>
+              <td><md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button></td>
+          </tr>
+          <tr>
+               <td>Change notes font size</td>
+               <td><input type="text" placeholder="Put in a number" id="notesFontSize" value=""></input></td>
+               <td><md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button></td>
+          </tr>
+          <tr>
+               <td>Choose priority number</td>
+               <td><input type="text" placeholder="Put in a number" id="priorityNumber" value=""></input></td>
+               <td><md-button class="md-raised md-primary" id="btnPriorityNumber" type="submit">Change</md-button></td>
+          </tr>
+        </table>                     
+        
       </p>        
       <p>
-        Choose priority number
-        <input type="text" placeholder="Put in a number" id="priorityNumber" value=""></input>
-        <md-button class="md-raised md-primary" id="btnPriorityNumber" type="submit">Change</md-button>
+        <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
+       
       </p>          
 
       <br />
