--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
       <p>
         <table>
           <tr>
-              <td>Change story font size</td>
+              <td>Change <span class="bold">story font size</span></td>
               <td><input type="text" placeholder="Put in a number" id="storyFontSize" value=""></input></td>
               <td><md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button></td>
           </tr>
           <tr>
-               <td>Change notes font size</td>
+               <td>Change <span class="bold">notes font size</span></td>
                <td><input type="text" placeholder="Put in a number" id="notesFontSize" value=""></input></td>
                <td><md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button></td>
           </tr>
           <tr>
-               <td>Choose priority number</td>
+               <td>Choose <span class="bold">priority number</span></td>
                <td><input type="text" placeholder="Put in a number" id="priorityNumber" value=""></input></td>
                <td><md-button class="md-raised md-primary" id="btnPriorityNumber" type="submit">Change</md-button></td>
           </tr>
