--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="./images/favicon.png">
 
   </head>
-  <body ng-controller="homeController">
+  <body ng-controller="homeController" ng-cloak>
 
     <!-- Sablono logo with link to Sablono website -->
     <a href="http://www.sablono.com" target="_blank">
