--- a/index.html
+++ b/index.html
@@ -37,27 +37,22 @@
           <tr>
               <td>Change <span class="bold">story font size</span></td>
               <td><input type="text" placeholder="Put in a number" id="storyFontSize" value=""></input></td>
-              <td><md-button class="md-raised md-primary" id="btnStoryFontSize" type="submit">Change</md-button></td>
           </tr>
           <tr>
                <td>Change <span class="bold">notes font size</span></td>
                <td><input type="text" placeholder="Put in a number" id="notesFontSize" value=""></input></td>
-               <td><md-button class="md-raised md-primary" id="btnNotesFontSize" type="submit">Change</md-button></td>
           </tr>
           <tr>
                <td>Choose <span class="bold">priority number</span></td>
                <td><input type="text" placeholder="Put in a number" id="priorityNumber" value=""></input></td>
-               <td><md-button class="md-raised md-primary" id="btnPriorityNumber" type="submit">Change</md-button></td>
+          </tr>
+          <tr>
+               <td>To many notes on PDF?</td>
+               <td><md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button></td>
           </tr>
         </table>                     
       </p>     
       <br />   
-      <p>
-        
-        <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
-       
-      </p>          
-
       <br />
       <h2>Story details</h2>
       <br />
