--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <table>
           <tr>
               <td>Change <span class="bold">story font size</span></td>
-              <td><input type="text" placeholder="Put in a number" id="storyFontSize" value=""></input></td>
+              <td><input type="text" placeholder="Put in a number" id="storyFontSize" value="19"></input></td>
           </tr>
           <tr>
                <td>Change <span class="bold">notes font size</span></td>
-               <td><input type="text" placeholder="Put in a number" id="notesFontSize" value=""></input></td>
+               <td><input type="text" placeholder="Put in a number" id="notesFontSize" value="12"></input></td>
           </tr>
           <tr>
                <td>Choose <span class="bold">priority number</span></td>
