--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <md-checkbox
                         ng-model="checkbox"
                         aria-label="To many notes on PDF?"
-                        ng-switch on="showCheckbox()"
+                        ng-click="showCheckbox()"
                         class="md-warn md-align-top-left" flex>
                       To many notes on PDF?  <br/>
                     
