--- a/index.html
+++ b/index.html
@@ -47,20 +47,18 @@
                <td><input type="text" placeholder="Put in a number" id="priorityNumber" value=""></input></td>
           </tr>
           <tr>
-               <td><md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button></td>
-               <td>
-                  <p>
-                    <md-checkbox
+               <td><md-checkbox
                         ng-model="checkbox"
                         aria-label="To many notes on PDF?"
                         ng-click="showCheckbox()"
                         class="md-warn md-align-top-left" flex>
-                      To many notes on PDF?  <br/>
-                    
-                      {{ checkbox }}
+                      To many notes on PDF?
                     </md-checkbox>
                     
-                  </p>
+               </td>
+               <td>
+
+                  <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
                </td>
           </tr>
         </table>                     
