--- a/index.html
+++ b/index.html
@@ -46,23 +46,19 @@
                <td>Choose <span class="bold">priority number</span></td>
                <td><input type="text" placeholder="Put in a number" id="priorityNumber" value=""></input></td>
           </tr>
-          <tr>
-               <td><md-checkbox
-                        ng-model="checkbox"
-                        aria-label="To many notes on PDF?"
-                        ng-click="showCheckbox()"
-                        class="md-warn md-align-top-left" flex>
-                      To many notes on PDF?
-                    </md-checkbox>
-                    
-               </td>
-               <td>
-
-                  <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
-               </td>
-          </tr>
         </table>                     
-      </p>     
+      </p>    
+      <p>
+        <md-checkbox
+            ng-model="checkbox"
+            aria-label="To many notes on PDF?"
+            ng-click="showCheckbox()"
+            class="md-warn md-align-top-left" flex>
+          To many notes on PDF?
+        </md-checkbox>
+        <br />
+        <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
+      </p> 
       <br />   
       <br />
       <h2>Story details</h2>
