--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             ng-model="checkbox"
             aria-label="To many notes on PDF?"
             ng-click="showCheckbox()"
-            class="md-warn md-align-top-left" id="chechboxDeleteNotes" flex>
+            class="md-warn md-align-top-left" id="chechboxDeleteNotes" ng-disabled="true" flex>
           To many notes on PDF?
         </md-checkbox>
         <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
