--- a/index.html
+++ b/index.html
@@ -54,10 +54,21 @@
             ng-model="checkbox"
             aria-label="To many notes on PDF?"
             ng-click="showCheckbox()"
-            class="md-warn md-align-top-left" id="chechboxDeleteNotes" ng-disabled="true" flex>
+            class="md-warn md-align-top-left" id="chechboxDeleteNotes" flex>
           To many notes on PDF?
         </md-checkbox>
         <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
+
+        <div id="deleteNotesDone">
+          <md-checkbox
+            ng-model="checkbox"
+            aria-label="To many notes on PDF?"
+            ng-click="showCheckbox()"
+            class="md-warn md-align-top-left" ng-disabled="true" flex>
+            To many notes on PDF?
+          </md-checkbox>
+          <md-button class="md-raised md-primary" type="submit" ng-disabled="true">Delete all notes from PDF</md-button>
+        </div>
       </p> 
       <br />   
       <br />
