--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             aria-label="To many notes on PDF?"
             ng-click="showCheckbox()"
             class="md-warn md-align-top-left" ng-disabled="true" flex>
-            To many notes on PDF?
+            Done!
           </md-checkbox>
-          <md-button class="md-raised md-primary" type="submit" ng-disabled="true">Delete all notes from PDF</md-button>
+          <md-button class="md-raised md-primary" type="submit" ng-disabled="true">All notes are deleted</md-button>
         </div>
       </p> 
       <br />   
