--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <p>
         <table>
           <tr>
-              <td>Change <span class="bold">story font size</span></td>
+              <td>Change <span class="bold">story</span> font size</td>
               <td><input type="text" placeholder="Put in a number" id="storyFontSize" value="19"></input></td>
           </tr>
           <tr>
-               <td>Change <span class="bold">notes font size</span></td>
+               <td>Change <span class="bold">notes</span> font size</td>
                <td><input type="text" placeholder="Put in a number" id="notesFontSize" value="12"></input></td>
           </tr>
           <tr>
