--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <table>
           <tr>
               <td>Change <span class="bold">story</span> font size</td>
-              <td><input type="text" placeholder="Put in a number" id="storyFontSize" value="19" required></input></td>
+              <td><input type="text" placeholder="Put in a number (required)" id="storyFontSize" value="19"></input></td>
           </tr>
           <tr>
                <td>Change <span class="bold">notes</span> font size</td>
-               <td><input type="text" placeholder="Put in a number" id="notesFontSize" value="12" required></input></td>
+               <td><input type="text" placeholder="Put in a number (required)" id="notesFontSize" value="12"></input></td>
           </tr>
           <tr>
                <td>Choose <span class="bold">priority number</span></td>
