--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <md-button class="md-raised md-primary" type="submit" id="btnPrintPDF">PRINT story as PDF</md-button> 
         <md-button class="md-raised md-primary" type="submit" id="btnOpenPDF">OPEN story as PDF</md-button> 
         <md-button class="md-raised md-primary" type="submit" id="btnSavePDF">SAVE story as PDF</md-button>
+        <span id="fontSizeAlert">You must fill in a story (default: 19) and notes (default: 12) font size!</span>
       </p>
       <br />
       <p>
