--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             aria-label="To many notes on PDF?"
             ng-click="showCheckbox()"
             class="md-warn md-align-top-left" id="chechboxDeleteNotes" flex>
-          To many notes on PDF?
+          Delete all notes in PDF
         </md-checkbox>
         <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
 
@@ -149,7 +149,7 @@
               aria-label="To many notes on PDF?"
               ng-click="showCheckbox()"
               class="md-warn md-align-top-left" id="sprintchechboxDeleteNotes" flex>
-              To many notes on PDF?
+              Delete all notes in PDF
           </md-checkbox>
           <md-button class="md-raised md-primary" id="sprintbtnDeleteNotes" type="submit">Delete all notes from sprint PDF</md-button>
 
