--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             class="md-warn md-align-top-left" id="chechboxDeleteNotes" flex>
           Delete all notes in PDF
         </md-checkbox>
-        <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Delete all notes from PDF</md-button>
+        <md-button class="md-raised md-primary" id="btnDeleteNotes" type="submit">Confirm</md-button>
 
         <div id="deleteNotesDone">
           <md-checkbox
@@ -143,6 +143,7 @@
               Add auto numbering to PDF
           </md-checkbox>
         </p>
+        <br />
         <p>
           <md-checkbox
               ng-model="sprintcheckbox"
@@ -151,7 +152,7 @@
               class="md-warn md-align-top-left" id="sprintchechboxDeleteNotes" flex>
               Delete all notes in PDF
           </md-checkbox>
-          <md-button class="md-raised md-primary" id="sprintbtnDeleteNotes" type="submit">Delete all notes from sprint PDF</md-button>
+          <md-button class="md-raised md-primary" id="sprintbtnDeleteNotes" type="submit">Confirm</md-button>
 
           <div id="sprintdeleteNotesDone">
             <md-checkbox
