--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <md-checkbox
               ng-model="sprintcheckbox"
               aria-label="To many notes on PDF?"
-              ng-click="showCheckbox()"
+              ng-click="sprintshowCheckbox()"
               class="md-warn md-align-top-left" id="sprintchechboxDeleteNotes" flex>
               Delete all notes in PDF
           </md-checkbox>
@@ -156,9 +156,9 @@
 
           <div id="sprintdeleteNotesDone">
             <md-checkbox
-              ng-model="checkbox"
+              ng-model="sprintcheckbox"
               aria-label="To many notes on PDF?"
-              ng-click="showCheckbox()"
+              ng-click="sprintshowCheckbox()"
               class="md-warn md-align-top-left" ng-disabled="true" flex>
               Done!
             </md-checkbox>
